--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "chalk": "^3.0.0",
     "inquirer": "^7.0.4",
     "inquirer-recursive": "0.0.6",
+    "jest": "^25.1.0",
     "js-image-generator": "^1.0.2",
     "request": "^2.88.2"
   }
